--- a/Homework8/SearchBarSample/SearchBarSample/Components/EmptyView.xib
+++ b/Homework8/SearchBarSample/SearchBarSample/Components/EmptyView.xib
@@ -10,37 +10,40 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="EmptyView" customModule="SearchBarSample" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MGe-Oo-zkn">
-                    <rect key="frame" x="20" y="229" width="353" height="239"/>
+                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MGe-Oo-zkn">
+                    <rect key="frame" x="53" y="284" width="286" height="243"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="y8v-Mk-Q01">
-                            <rect key="frame" x="50" y="21" width="253" height="128"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="binoculars" id="oL6-QF-hgo">
+                            <rect key="frame" x="23" y="57" width="240" height="128"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Aradiginiz sonuc bulunamadi" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Znu-Ll-ilW">
+                            <rect key="frame" x="33" y="174" width="230" height="61"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemGray6Color"/>
-                    <constraints>
-                        <constraint firstItem="y8v-Mk-Q01" firstAttribute="top" secondItem="MGe-Oo-zkn" secondAttribute="top" constant="20" id="20o-2E-7T2"/>
-                        <constraint firstItem="y8v-Mk-Q01" firstAttribute="leading" secondItem="MGe-Oo-zkn" secondAttribute="leading" constant="50" id="CEx-LK-qFf"/>
-                        <constraint firstAttribute="trailing" secondItem="y8v-Mk-Q01" secondAttribute="trailing" constant="50" id="iLl-vy-ilx"/>
-                    </constraints>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-            <constraints>
-                <constraint firstItem="MGe-Oo-zkn" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="IMe-VL-THJ"/>
-                <constraint firstItem="MGe-Oo-zkn" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="170" id="Lmk-ct-Kfa"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="MGe-Oo-zkn" secondAttribute="trailing" constant="20" id="WYa-Uz-aa0"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="MGe-Oo-zkn" secondAttribute="bottom" constant="350" id="drV-bs-dS8"/>
-            </constraints>
+            <connections>
+                <outlet property="imageView" destination="oL6-QF-hgo" id="HRa-e1-ck9"/>
+                <outlet property="label" destination="Znu-Ll-ilW" id="JND-Cl-bKd"/>
+            </connections>
             <point key="canvasLocation" x="156.4885496183206" y="-3.5211267605633805"/>
         </view>
     </objects>
     <resources>
+        <image name="binoculars" width="5472" height="3648"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
